Estrucutura para los idiomas

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -1,3 +1,8 @@
 {
-    "WELCOME_TITLE": "Welcome to the Resuelvo Explorando configuration tool"
+    "WELCOME_TITLE": "Welcome to the MoLE configuration tool",
+    "ADD_ACTIVITY": "Add New Activity",
+    "TITLE": "Title",
+    "DESCRIPTION": "Description",
+    "DELETE_BUTTON": "Delete",
+    "EDIT_BUTTON": "Edit"
 }
