--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -1,3 +1,8 @@
 {
-    "WELCOME_TITLE": "Bienvenido a la herramienta de configuración de Resuelvo Explorando"
+    "WELCOME_TITLE": "Bienvenido a la herramienta de configuración de MoLE",
+    "ADD_ACTIVITY": "Añadir nueva tarea",
+    "TITLE": "Title",
+    "DESCRIPTION": "Description",
+    "DELETE_BUTTON": "Delete",
+    "EDIT_BUTTON": "Edit"
 }
