--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -1,4 +1,4 @@
 {
     "WELCOME_TITLE": "Welcome to the MoLE configuration tool",
-    "ADD_ACTIVITY": "Add New Activity"
+    "ADD_TASK": "New Task"
 }
