--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -1,4 +1,4 @@
 {
     "WELCOME_TITLE": "Bienvenido a la herramienta de configuración de MoLE",
-    "ADD_TASK": "Nueva Tarea"
+    "ADD_TASK": "Añadir Tarea"
 }
