--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -1,4 +1,4 @@
 {
-    "WELCOME_TITLE": "Bienvenido a la herramienta de configuración de MoLE",
+    "WELCOME_TITLE": "Bienvenido a la herramienta de configuración MoLE",
     "ADD_TASK": "Añadir Tarea"
 }
