Modal de crear una actividad internacionalizado

--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -3,5 +3,7 @@
     "ADD_TASK": "Añadir Tarea",
     "CREATE_NEW_ACTIVITY":"Crear Nueva Actividad",
     "EDIT": "Editar",
-    "DELETE": "Eliminar"
+    "DELETE": "Eliminar",
+    "TITLE":"Título",
+    "DESCRIPTION":"Descripción"
 }
