--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -3,5 +3,7 @@
     "ADD_TASK": "Add Task",
     "CREATE_NEW_ACTIVITY":"Create New Activity",
     "EDIT": "Edit",
-    "DELETE": "Delete"
+    "DELETE": "Delete",
+    "TITLE":"Title",
+    "DESCRIPTION":"Description"
 }
