--- a/src/locales/es-ES.json
+++ b/src/locales/es-ES.json
@@ -24,8 +24,14 @@
     "TASK_TYPE_FA": "Respuesta libre",
     "TASK_TYPE_MT": "Tarea Multimedia",
 
-    "_comment4":"Task",
-    "EDIT_ACTIVITY":"Editando Actividad",
+    "_comment4":"Activity",
+    "TITLE_ACTIVITY":"Título de la Actividad",
+    "EDITING_ACTIVITY":"Editando Actividad",
+    "DESCRIPTION_ACTIVITY":"Descripcion de la Actividad",
+    "TASK_ACTIVITY":"Tareas",
+    "ADD_TASK_ACTIVITY":"Añadir Tarea",
+    "DISCARD_ACTIVITY":"Descartar",
+    "SAVE_ACTIVITY":"Guardar",
     "_comment5": "Workflow",
     "WORKFLOW_TITLE": "Definiendo workflow",
     "WORKFLOW_FREE": "Libre",
