--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -24,7 +24,7 @@
     "TASK_TYPE_FA": "Free answer",
     "TASK_TYPE_MT": "Multimedia task",
 
-    "_comment4":"Task",
+    "_comment4":"Activity",
     "EDIT_ACTIVITY":"Editing Activity",
     "TITLE_ACTIVITY":"Activity Title",
     "DESCRIPTION_ACTIVITY":"Activity Description",
